D3D11 vout fails to open a video with non even width
Logs:
core debug: Opening vout display wrapper
core debug: looking for vout display module matching "direct3d11": 12 candidates
direct3d11 debug: creating Vout EventThread
direct3d11 debug: Win32VoutCreateWindow
core debug: VoutDisplayEvent 'resize' 853x480
direct3d11 debug: created video sub-window
direct3d11 debug: Vout EventThread running
direct3d11 debug: disabling screen saver
direct3d11 debug: Created the D3D11 device 0x008d3a8c ctx 0x096b104c type 1 level b100.
direct3d11 debug: Using pixel format NV12 for chroma DXA9
direct3d11 debug: use a staging texture to crop to visible size
core debug: VoutDisplayEvent 'resize' 1732x1031
direct3d11 debug: DirectXUpdateRects souce offset: 0,0 visible: 853x480
direct3d11 debug: DirectXUpdateRects image_src coords: 0,0,864,480
direct3d11 debug: DirectXUpdateRects image_src_clipped coords: 0,0,852,480
direct3d11 debug: DirectXUpdateRects image_dst coords: 0,0,1732,974
direct3d11 debug: DirectXUpdateRects image_dst_clipped coords: 0,0,1732,974
direct3d11 error: Could not Create the D3d11 Texture. (hr=0x80070057)
direct3d11 error: Could not Create the main quad picture. (hr=0x0)
direct3d11 error: Failed to allocate resources
direct3d11 debug: Direct3D11 resources destroyed
direct3d11 error: Direct3D11 could not be opened
direct3d11 debug: Direct3D11 resources destroyed
direct3d11 debug: Direct3D11 device adapter closed
direct3d11 error: SetThumbNailClip failed
direct3d11 debug: Win32 Vout EventThread terminating
direct3d11 debug: Win32VoutCloseWindow
direct3d11 debug: WinProc WM_DESTROY
core debug: no vout display modules matched
core error: video output creation failed
qt debug: releasing video...
Happens on the latest win32 nightly, with d3d11, avcodec-thread=1 & avcodec-hw=d3d11va The sample was bbb_480p_h264
ID : 1
Format : AVC
Format/Info : Advanced Video Codec
Format profile : Main@L3
Format settings, CABAC : No
Format settings, ReFrames : 2 frames
Format settings, GOP : M=2, N=24
Codec ID : avc1
Codec ID/Info : Advanced Video Coding
Duration : 9 min 56 s
Bit rate : 2 900 kb/s
Width : 853 pixels
Original width : 854 pixels
Height : 480 pixels