direct3d11: don't allocate NV12/P010 textures with odd sizes

fixes #17419